--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = atmelavr
 board = attiny85
 framework = arduino
+board_fuses.lfuse = 0xE2
+board_fuses.hfuse = 0xDF
+board_fuses.efuse = 0xFF
+lib_deps = 
+	martin2250/ADCTouch@^1.0.4
+	fastled/FastLED@^3.7.6
