Add 'digispark' style attiny dev board environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,16 @@ board_fuses.efuse = 0xFF
 lib_deps = 
 	martin2250/ADCTouch@^1.0.4
 	fastled/FastLED@^3.7.6
+	nickcengel/TinyWireSio@0.0.0-alpha+sha.722ada4382
+
+[env:attiny85Usb]
+platform = atmelavr
+board = digispark-tiny
+framework = arduino
+board_fuses.lfuse = 0xE2
+board_fuses.hfuse = 0xDF
+board_fuses.efuse = 0xFF
+lib_deps = 
+	martin2250/ADCTouch@^1.0.4
+	fastled/FastLED@^3.7.6
+	nickcengel/TinyWireSio@0.0.0-alpha+sha.722ada4382
