--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .pio
 # Default ignored files
 /shelf/
-/workspace.xml
+**/workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+**/*-backups/**
+**/fp-info-cache
+PCB/~*
