--- a/CapacitiveLedFadeTiny/platformio.ini
+++ b/CapacitiveLedFadeTiny/platformio.ini
@@ -13,7 +13,7 @@ platform = atmelavr
 board = attiny85
 framework = arduino
 board_fuses.lfuse = 0xE2
-board_fuses.hfuse = 0xDF
+board_fuses.hfuse = 0xD7
 board_fuses.efuse = 0xFF
 lib_deps = 
 	martin2250/ADCTouch@^1.0.4
