--- a/CapacitiveLedFadeTiny/platformio.ini
+++ b/CapacitiveLedFadeTiny/platformio.ini
@@ -8,13 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:attiny85]
-platform = atmelavr
-board = attiny85
+[env:ATtiny3224]
+platform = atmelmegaavr
+board = ATtiny3224
+board_build.f_cpu = 20000000L
+; board_fuses.osccfg = 0x01     ; Select 16MHz internal oscillator
 framework = arduino
-board_fuses.lfuse = 0xE2
-board_fuses.hfuse = 0xD7
-board_fuses.efuse = 0xFF
-lib_deps = 
-	martin2250/ADCTouch@^1.0.4
-	fastled/FastLED@^3.7.6
+upload_protocol = serialupdi
+upload_port = /dev/ttyUSB0
+upload_speed = 230400
+lib_deps = fastled/FastLED@^3.9.13
+
+platform_packages = 
+    framework-arduino-megaavr-megatinycore @ file:///home/jbrooksbank/megaTinyCore/megaavr.zip
