add windows env, dont track vscode folder

--- a/CapacitiveLedFadeTiny/platformio.ini
+++ b/CapacitiveLedFadeTiny/platformio.ini
@@ -8,16 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ATtiny3224]
+[env]
 platform = atmelmegaavr
 board = ATtiny3224
 board_build.f_cpu = 20000000L
-; board_fuses.osccfg = 0x01     ; Select 16MHz internal oscillator
 framework = arduino
 upload_protocol = serialupdi
-upload_port = /dev/ttyUSB0
 upload_speed = 230400
 lib_deps = fastled/FastLED@^3.9.13
 
-platform_packages = 
-    framework-arduino-megaavr-megatinycore @ file:///home/jbrooksbank/megaTinyCore/megaavr.zip
+platform_packages = framework-arduino-megaavr-megatinycore @ https://github.com/SpenceKonde/megaTinyCore/
+[env:ATtiny3224Linux]
+upload_port = /dev/ttyUSB0
+
+[env:ATtiny3224Windows]
+upload_port = COM8
+
