store variable config values in EEPROM, accept over i2c
so much easier than expected lol

--- a/CapacitiveLedFadeTiny/platformio.ini
+++ b/CapacitiveLedFadeTiny/platformio.ini
@@ -16,11 +16,12 @@ framework = arduino
 upload_protocol = serialupdi
 upload_speed = 230400
 lib_deps = fastled/FastLED@^3.9.13
+build_flags = -I../Shared
 
 platform_packages = framework-arduino-megaavr-megatinycore @ https://github.com/SpenceKonde/megaTinyCore/
 [env:ATtiny3224Linux]
 upload_port = /dev/ttyUSB0
 
 [env:ATtiny3224Windows]
-upload_port = COM8
+upload_port = COM5
 
