--- a/Serial_i2c_Controller/platformio.ini
+++ b/Serial_i2c_Controller/platformio.ini
@@ -8,9 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
+[env]
 platform = atmelavr
 monitor_speed = 115200
 board = megaatmega2560
-upload_port = /dev/ttyACM0
 framework = arduino
+build_flags = -I../Shared
+
+[env:megaatmega2560Linux]
+upload_port = /dev/ttyACM0
+
+[env:megaatmega2560Windows]
+upload_port = COM3
