Add mode for consistent single color

--- a/Serial_i2c_Controller/platformio.ini
+++ b/Serial_i2c_Controller/platformio.ini
@@ -14,6 +14,7 @@ monitor_speed = 115200
 board = megaatmega2560
 framework = arduino
 build_flags = -I../Shared
+lib_deps = fastled/FastLED@^3.9.14
 
 [env:megaatmega2560Linux]
 upload_port = /dev/ttyACM0
